--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.5.0",
     "axios": "^1.1.3",
     "daisyui": "^2.41.0",
     "pinia": "^2.0.23",
